# madlibs

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  extensions.py  home.py  populate_tables.py  routes.py
app/models/: adjective.py  adverb.py  noun.py  verb.py  vim word_schema.py
app/templates/: base.html  home.html
app/words/: adjectives.csv  adverbs.csv
server/: Dockerfile  pyproject.toml  run.py
server/app/: __init__.py  extensions.py  populate_tables.py
server/app/models/: Adjective.py  Adverb.py  Noun.py  Verb.py  WordSchema.py  word_schema.py
server/app/routes/: routes.py
server/app/words/: nouns.csv  verbs.csv
server/migrations/versions/: f2f942c0a354_.py
tests/integration/: integration_tests.py
